--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
           href="https://www.linkedin.com/in/tanpreet-singh-jolly-b564a8232"
           target="_blank"
         > -->
-      <a href="https://www.linkedin.com/in/tiana-lau-a99303293/" target="_blank">
+      <!-- <a href="https://www.linkedin.com/in/tiana-lau-a99303293/" target="_blank">
         <img src="build/img/linkedin.png" alt="linked"
           class="h-auto w-8 cursor-pointer rounded-lg duration-300 hover:scale-110 hover:bg-blue-700 hover:transition-all" />
-      </a>
+      </a> -->
       <!-- <a href="https://twitter.com/JollyTanpreet" target="_blank"> -->
-      <a href="https://x.com/Tiana1219916" target="_blank">
+      <!-- <a href="https://x.com/Tiana1219916" target="_blank">
         <img src="build/img/twitter.png" alt="twitter"
           class="h-auto w-8 cursor-pointer rounded-full duration-300 hover:scale-110 hover:bg-cyan-600 hover:transition-all" />
-      </a>
-      <a href="https://github.com/bigliuliu" target="_blank">
+      </a> -->
+      <a href="https://github.com/Hongwing" target="_blank">
         <img src="build/img/footer-github.png" alt="github"
           class="h-auto w-8 cursor-pointer rounded-full duration-300 hover:scale-110 hover:bg-purple-500 hover:transition-all" />
       </a>
 
       <!-- <a href="mailto:tanpreet2002@gmailcom" target="_blank"> -->
-      <a href="mailto:sweetliu666@gmailcom" target="_blank">
+      <a href="mailto:mracarat@gmailcom" target="_blank">
         <img src="build/img/mail.png" alt="mail"
           class="h-auto w-8 cursor-pointer rounded-full duration-300 hover:scale-110 hover:bg-red-600 hover:transition-all" />
       </a>
@@ -43,8 +43,9 @@
   </aside>
   <header class="fixed top-0 z-10 flex h-20 min-w-full justify-center p-2 text-lg text-gray-300 sm:h-24">
     <div class="header-hero flex w-4/5 items-center justify-between">
-      <img id="logo" src="build/img/logo.jpg" alt="logo" class="block h-full" />
-      <img id="menu" src="build/img/menu.svg" alt="menu" class="block h-1/2 hover:cursor-pointer lg:hidden" />
+      <!-- <img id="logo" src="build/img/logo.jpg" alt="logo" class="block h-full" /> -->
+
+      <!-- <img id="menu" src="build/img/menu.svg" alt="menu" class="block h-1/2 hover:cursor-pointer lg:hidden" />
       <nav id="navbar" class="hidden gap-8 text-xl lg:flex">
         <a href="index.html"
           class="transition-all duration-300 hover:scale-x-105 hover:text-blue-300 hover:ease-in-out">Home
@@ -61,9 +62,9 @@
         <a href="#contact"
           class="transition-all duration-300 hover:scale-105 hover:text-blue-300 hover:ease-in-out">Contact
         </a>
-      </nav>
+      </nav> -->
     </div>
-    <div id="dropdownMenu"
+    <!-- <div id="dropdownMenu"
       class="animate_animated animate__slideInDown fixed top-0 left-0 z-20 hidden h-screen w-full flex-col items-center text-3xl lg:hidden">
       <ul id="links" class="toggle-list w-4/5">
         <li>
@@ -79,7 +80,7 @@
           <a href="#contact">Contact</a>
         </li>
       </ul>
-    </div>
+    </div> -->
   </header>
   <main class="flex min-h-screen min-w-full flex-col items-center">
     <section id="hero" class="flex w-3/4 flex-col items-center justify-center pt-12 md:pt-24 lg:min-w-full">
@@ -89,13 +90,13 @@
             Hi,
           </h2>
           <h2 class="animate__animated animate__fadeInUp text-2xl sm:text-3xl md:text-4xl">
-            My name is
+            UKnowM3 means
           </h2>
           <h3 id="name" class="animate__animated animate__fadeInUp pt-1 pb-1 text-5xl sm:text-6xl md:text-7xl">
-            Tiana Lau
+            You Know What I'm Saying.
           </h3>
           <p class="animate__animated animate__fadeInUp pt-3 text-2xl sm:text-3xl md:text-5xl">
-            I build things for web!
+            ❤️
           </p>
           <button id="contactMe"
             class="animate__animated animate__zoomIn mt-5 flex h-10 w-40 items-center justify-center rounded-3xl border-2 to-transparent p-2 text-center text-lg md:h-14 md:w-60 md:text-2xl">
@@ -107,7 +108,8 @@
         </figure>
       </div>
     </section>
-    <section id="about-me" class="flex w-full flex-col items-center justify-center gap-8 p-8">
+    <!-- About -->
+    <!-- <section id="about-me" class="flex w-full flex-col items-center justify-center gap-8 p-8">
       <div class="aboutCard mx-auto min-h-full w-full sm:w-4/6">
         <h2 class="text-3xl sm:text-4xl md:text-5xl" id="about-me-caption">
           About Me
@@ -164,8 +166,9 @@
           <a href="#contact">CONTACT</a>
         </button>
       </div>
-    </section>
-    <section id="tech-stack" class="flex min-w-full flex-col items-center justify-center">
+    </section> -->
+    <!-- my tech stack -->
+    <!-- <section id="tech-stack" class="flex min-w-full flex-col items-center justify-center">
       <h1 class="text-3xl sm:text-4xl md:text-5xl" id="tech-stack-caption">
         My Tech Stack
       </h1>
@@ -180,7 +183,6 @@
           class="sm:scale-75" />
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/React.svg/2275px-React.svg.png" alt="ts-1"
           loading="lazy" class="sm:scale-75" />
-        <!-- src="https://adware-technologies.s3.amazonaws.com/uploads/technology/thumbnail/20/express-js.png" -->
         <img src="build/img/express.png" alt="ts-1" loading="lazy" class="sm:scale-75" />
         <img src="build/img/html.png" alt="ts-1" loading="lazy" class="sm:scale-75" />
         <img src="build/img/css.png" alt="ts-2" loading="lazy" class="sm:scale-75" />
@@ -191,8 +193,9 @@
         <img src="build/img/footer-github.png" alt="ts-7" loading="lazy" class="sm:scale-75" />
         <img src="build/img/sass.png" alt="ts-8" loading="lazy" class="sm:scale-75" />
       </div>
-    </section>
-    <section id="projects" class="relative flex min-w-full flex-col items-center gap-4 p-5">
+    </section> -->
+    <!-- project -->
+    <!-- <section id="projects" class="relative flex min-w-full flex-col items-center gap-4 p-5">
       <div id="caption-projects" class="text-center">
         <p class="text-3xl sm:text-4xl md:text-5xl" id="projects-heading">
           My Projects
@@ -222,10 +225,11 @@
         </div>
       </div>
     </section>
+     -->
     <section id="contact" class="flex min-h-screen w-full flex-col items-center justify-center p-6">
       <h2 class="text-3xl sm:text-4xl md:text-5xl">Get in Touch</h2>
       <p class="pt-4 text-center text-2xl text-gray-300">
-        I'd love to hear from you!
+        Contact me if you want UKnowM3.com
       </p>
       <section id="form-container" class="flex flex-wrap items-center justify-center xl:gap-4">
         <form id="email-form">
@@ -248,16 +252,10 @@
     </section>
   </main>
   <footer class="flex h-14 w-4/5 items-center justify-center p-5 text-gray-200 sm:justify-between">
-    <p class="hidden sm:inline">sweetliu666@gmail.com</p>
+    <p class="hidden sm:inline">mracarat@gmail.com</p>
     <div id="footer-img-wrap" class="flex gap-2">
-      <a href="https://github.com/bigliuliu" target="_blank">
+      <a href="https://github.com/Hongwing" target="_blank">
         <img src="build/img/footer-github.png" alt="github" class="h-9 w-9" />
-      </a>
-      <a href="https://www.linkedin.com/in/tiana-lau-a99303293/" target="_blank">
-        <img src="build/img/linkedin.png" alt="linkedin" class="h-9 w-9" />
-      </a>
-      <a href="https://x.com/Tiana1219916" target="_blank">
-        <img src="build/img/twitter.png" alt="twitter" class="h-9 w-9" />
       </a>
     </div>
   </footer>
@@ -271,29 +269,29 @@
         publicKey: 'lZo3_0SwmgDYU26LH'
       });
     })();
-// do this for 30 seconds
-var duration = 3 * 1000;
-var end = Date.now() + duration;
-(function frame() {
-  // launch a few confetti from the left edge
-  confetti({
-    particleCount: 3,
-    angle: 60,
-    spread: 55,
-    origin: { x: 0 }
-  });
-  // and launch a few from the right edge
-  confetti({
-    particleCount: 3,
-    angle: 120,
-    spread: 55,
-    origin: { x: 1 }
-  });
-  // keep going until we are out of time
-  if (Date.now() < end) {
-    requestAnimationFrame(frame);
-  }
-}());
+    // do this for 30 seconds
+    var duration = 3 * 1000;
+    var end = Date.now() + duration;
+    (function frame() {
+      // launch a few confetti from the left edge
+      confetti({
+        particleCount: 3,
+        angle: 60,
+        spread: 55,
+        origin: { x: 0 }
+      });
+      // and launch a few from the right edge
+      confetti({
+        particleCount: 3,
+        angle: 120,
+        spread: 55,
+        origin: { x: 1 }
+      });
+      // keep going until we are out of time
+      if (Date.now() < end) {
+        requestAnimationFrame(frame);
+      }
+    }());
   </script>
 </body>
 
